crates/servicepoint_binding_uniffi/libraries/python/servicepoint_binding_uniffi.py


_UniffiLib = _uniffi_load_indirect()
_UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK = ctypes.CFUNCTYPE(None,ctypes.c_uint64,ctypes.c_int8,
)
_UNIFFI_FOREIGN_FUTURE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
_UNIFFI_CALLBACK_INTERFACE_FREE = ctypes.CFUNCTYPE(None,ctypes.c_uint64,
)
class _UniffiForeignFuture(ctypes.Structure):
    _fields_ = [
        ("handle", ctypes.c_uint64),
        ("free", _UNIFFI_FOREIGN_FUTURE_FREE),
    ]
class _UniffiForeignFutureStructU8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU8,
)
class _UniffiForeignFutureStructI8(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int8),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I8 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI8,
)
class _UniffiForeignFutureStructU16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU16,
)
class _UniffiForeignFutureStructI16(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int16),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I16 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI16,
)
class _UniffiForeignFutureStructU32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU32,
)
class _UniffiForeignFutureStructI32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int32),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI32,
)
class _UniffiForeignFutureStructU64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_uint64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_U64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructU64,
)
class _UniffiForeignFutureStructI64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_int64),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_I64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructI64,
)
class _UniffiForeignFutureStructF32(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_float),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F32 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF32,
)
class _UniffiForeignFutureStructF64(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_double),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_F64 = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructF64,
)
class _UniffiForeignFutureStructPointer(ctypes.Structure):
    _fields_ = [
        ("return_value", ctypes.c_void_p),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_POINTER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructPointer,
)
class _UniffiForeignFutureStructRustBuffer(ctypes.Structure):
    _fields_ = [
        ("return_value", _UniffiRustBuffer),
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_RUST_BUFFER = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructRustBuffer,
)
class _UniffiForeignFutureStructVoid(ctypes.Structure):
    _fields_ = [
        ("call_status", _UniffiRustCallStatus),
    ]
_UNIFFI_FOREIGN_FUTURE_COMPLETE_VOID = ctypes.CFUNCTYPE(None,ctypes.c_uint64,_UniffiForeignFutureStructVoid,
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_bitvec.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_bitvec.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_bitvec.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_bitvec.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_clone.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_clone.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_load.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_load.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_new.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitvec_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_copy_raw.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_copy_raw.restype = _UniffiRustBuffer
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_equals.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_equals.restype = ctypes.c_int8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_fill.argtypes = (
    ctypes.c_void_p,
    ctypes.c_int8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_fill.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_get.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_get.restype = ctypes.c_int8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_len.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_len.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_set.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_int8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitvec_set.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_bitmap.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_bitmap.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_bitmap.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_bitmap.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_clone.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_clone.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_load.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_load.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new_max_sized.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_bitmap_new_max_sized.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_copy_raw.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_copy_raw.restype = _UniffiRustBuffer
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_equals.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_equals.restype = ctypes.c_int8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_fill.argtypes = (
    ctypes.c_void_p,
    ctypes.c_int8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_fill.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_get.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_get.restype = ctypes.c_int8
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_height.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_height.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_set.argtypes = (
    ctypes.c_void_p,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_int8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_set.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_width.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_bitmap_width.restype = ctypes.c_uint64
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_brightnessgrid.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_clone_brightnessgrid.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_brightnessgrid.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_free_brightnessgrid.restype = None
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_clone.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_clone.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_load.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_load.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_new.argtypes = (
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_constructor_brightnessgrid_new.restype = ctypes.c_void_p
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_copy_raw.argtypes = (
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_copy_raw.restype = _UniffiRustBuffer
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_equals.argtypes = (
    ctypes.c_void_p,
    ctypes.c_void_p,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_servicepoint_binding_uniffi_fn_method_brightnessgrid_equals.restype = ctypes.c_int8
